# jXAJ

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/jxaj/: __init__.py  config.py  extractor.py  forcing_adapter.py  losses.py  model.py  parameters.py  postprocessor.py  preprocessor.py  runner.py
src/jxaj/calibration/: __init__.py  optimizer.py  parameter_manager.py  worker.py
tests/: test_losses.py  test_model.py  test_parameters.py  test_registration.py
