[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project]
name = "jxaj"
version = "0.2.1"
description = "Xinanjiang (XAJ) JAX rainfall-runoff model -- symfluence plugin"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "SYMFLUENCE Team", email = "dev@symfluence.org" }]

dependencies = [
    "symfluence>=0.7.0",
    "jsnow17>=0.1.0",
    "numpy",
    "pandas",
    "xarray",
]

[project.optional-dependencies]
jax = ["jax", "jaxlib"]
dev = ["pytest>=7.0"]

[project.entry-points."symfluence.plugins"]
xinanjiang = "jxaj:register"
